--- a/moto/ec2/resources/latest_amis/ap-southeast-3.json
+++ b/moto/ec2/resources/latest_amis/ap-southeast-3.json
@@ -1,11 +1,27 @@
 [
   {
-    "ami_id": "ami-0321e09524ba307cd",
+    "ami_id": "ami-0f3ea7eb20b1813ab",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-gp2",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-09e947dbccac0e3e6",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -16,76 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0667c5c08ef2aeddb",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-08c82f222bd6ea38e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-09b2a244ec4fde60e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-056ace9b5c299cf5b",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0d0d46eb1501c5420",
+    "ami_id": "ami-0c9a6f9b4446adbf0",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -96,44 +48,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-06bb3242dec2eeb44",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0a2e6e557a339930e",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-06bf04f9e3de77e37",
+    "ami_id": "ami-0db581c79dde67a5a",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -144,12 +64,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0105f582118f5c75b",
+    "ami_id": "ami-00fbea627bccd4c43",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-gp2",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -160,28 +80,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0d47bc522eab37c9a",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-08412f6a4cac677f4",
+    "ami_id": "ami-02a6bcdd5aac35b3f",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230221.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-arm64-gp2",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -192,12 +96,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0dbbdadea5c056087",
+    "ami_id": "ami-04480b5eae119206a",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
@@ -208,28 +112,188 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0e6634622eaaad748",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "785737495101",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-03bfec71105bbb103",
+    "ami_id": "ami-058eea9e9b3bef767",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0e7272508b22754a9",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230221.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0abb2c7f3efd7062e",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0e3cc3bec8112d5da",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-01f0e988b8a0e290c",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230221.0-arm64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-059a6a763f64820c1",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-09acc4efc6d02d173",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230221.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0c03e557dc29042de",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-gp2",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-03f7d6844ec11ca7d",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0328ef6fc50067214",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-01d421cacae26f7eb",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230221.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230221.0-x86_64-ebs",
+    "owner_id": "785737495101",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-026bf16ed766445e0",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230221.0 arm64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230221.0-arm64-gp2",
     "owner_id": "785737495101",
     "platform": null,
     "public": true,
